--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "keycloak-connect": "^26.1.1",
     "morgan": "^1.10.1",
     "prisma": "^6.19.0"
   }
